--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<!DOCTYPE>
-<header></header>
-  <title></title>
-    <div>
-      <img> 
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Pat's Salmon Cookies</h1>
+<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+
+<div>
+  <img src=https://raw.githubusercontent.com/codefellows/seattle-201d22/master/06-dom_objects_domain_modeling/lab/helpful-resources/salmon.png
+
+<p>My first paragraph.</p>
+
+</body>
+</html>
