data input into constructor framework

--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
 <html>
 <body>
 
-<h1>Pat's Salmon Cookies</h1>
-<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+<header>
+  <h1>Pat's Salmon Cookies</h1>
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <h1>Pat's Salmon Cookies</h1>
+</header>
 
 <div>
   <img src=https://raw.githubusercontent.com/codefellows/seattle-201d22/master/06-dom_objects_domain_modeling/lab/helpful-resources/salmon.png
 
 <p>My first paragraph.</p>
+
+<table>
+  <thead>
+    <td>Location</td>
+    <td>Minimum</td>
+    <td>Maximum</td>
+    <td>Average</td>
+  </thead>
+  <tbody id="shell">
+
+  </tbody>
+</table>
 
 </body>
 </html>
