--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <body>
 
 <header>
-  <h1>Pat's Salmon Cookies</h1>
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <h1>Pat's Salmon Cookies</h1>
 </header>
@@ -11,8 +10,10 @@
 <div>
   <img src=https://raw.githubusercontent.com/codefellows/seattle-201d22/master/06-dom_objects_domain_modeling/lab/helpful-resources/salmon.png
 
-<p>My first paragraph.</p>
+<p>Some text here.</p>
 
+
+<h2>Cookies Needed By Location Each Day</h2>
 <table>
   <thead>
     <td>Location</td>
