--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <body>
 
 <header>
+  <title>Pat's Salmon Cookies</title>
+    <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-  <h1>Pat's Salmon Cookies</h1>
 </header>
 
 <div>
